# openFrameworks

./: .gitmodules  CMakeLists.txt
libs/openFrameworks/utils/: ofConstants.h
